[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
warp = { version = "0.3.2", features = ["tls"] }
tokio-tungstenite = "0.17.1"
new_mime_guess = "4.0.1"
urlencoding = "2.1.0"
reqwest = "0.11.10"
futures = "0.3.21"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }