[package]
name = "StaticProxyServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
hyper = { version = "0.14.19", features = ["full"] }
hyper-tungstenite = "0.8.1"
hyper-staticfile = "0.9.1"
local-ip-address = "0.4.4"
tokio-rustls = "0.23.4"
lazy_static = "1.4.0"
urlencoding = "2.1.0"
reqwest = "0.11.11"
futures = "0.3.21"
serde_json = "1.0.81"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }